src/main/webapp/css/sitemap.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : Jul 4, 2017, 2:07:20 PM
    Author     : svendavison
*/

body {
    font-family: "Lucida Grande", "Lucida Sans Unicode", Tahoma, Verdana;
    font-size: 13px;
}

.lefttilt{
    -moz-transform: scale(2) rotate(-15deg) translateX(-50px);
    -webkit-transform: scale(2) rotate(-15deg) translateX(-50px);
    -o-transform: scale(2) rotate(-15deg) translateX(-50px);
    -ms-transform: scale(2) rotate(-15deg) translateX(-50px);
    transform: scale(2) rotate(-15deg) translateX(-50px);
}


/* .redshadow{
    text-shadow: 1px 1px 1px #FF866E;
} */

#twocol{
    -moz-column-count: 2;
    -moz-column-gap: 2px;
    -webkit-column-count: 2;
    -webkit-column-gap: px;
    column-count: 2;
    column-gap: 2px;
}
td {
    font-size: 11px;
    text-align: left;
}
th {
    text-align: left;
    padding-right: 30px;
    font-size: 11px;
}
tr.high {
    background-color: #f4f7fa
}
a {
    color: black;
}
header a {
    color: #2580B2
}
footer {
    padding: 2px;
    margin: 10px;
    font-size: 8pt;
    color: gray;
}
footer a {
    color: gray;
}
table {
    border-spacing: 5px;
}
#th {
    background-color: #C1C1C1;
}
#td-even {
    background-color: #E2E2E2;
}
#td-odd {
    background-color: #F5F5F5;
}

